[tool.poetry]
name = "drf-snippets-tutorial"
version = "0.1.0"
description = ""
authors = ["inna-tuzhikova <inna-tuzhikova@github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drf_snippets_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.8"
djangorestframework = "^3.14.0"
pygments = "^2.17.2"
httpie = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
